Add auth ctrl tests and openapi definitions
