# api/src/modules/auth/auth.routes.ts
@@ -1,5 +1,4 @@
 import { Router } from 'express';
-import passport from 'passport';
 
 import { asyncRequestHandler } from '../../shared/async-request-handler';
 
@@ -7,10 +6,6 @@ import { logIn, signUp } from './controllers/auth.ctrl';
 
 export const authRouter = Router();
 
-authRouter.get(
-  '/auth/login',
-  passport.authenticate('local'),
-  asyncRequestHandler(logIn)
-);
+authRouter.post('/session', asyncRequestHandler(logIn));
 
-authRouter.get('/auth/sign-up', asyncRequestHandler(signUp));
+authRouter.post('/users', asyncRequestHandler(signUp));
